Fixes issue where play button gets cut off by reducing radius of circle

--- a/style.css
+++ b/style.css
@@ -397,4 +397,5 @@ body {
 
 .play-btn--many-phonetics {
     height: 1.5rem;
+    width: 1.5rem;
 }
